src/objects/pse__Budget__c.object
<CustomObject>
    <customHelpPage>pse__BudgetHelp</customHelpPage>
    <description>A budgeted amount for a PSA project. Represents, depending on its type, customer purchase orders, internal budgets, outbound vendor purchase orders, or work orders, as well as change requests to these records. It may also contain a separate expense budget amount and specified pre-bill amount.</description>
    <fields>
        <fullName>pse__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Admin_Global_Edit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, allows Admin to make &apos;global&apos; changes to the Budget, including edits to the Budget&apos;s Project, Resource, Currency, or Date, even if Include In Financials is checked. Config requirement: Actuals Calculation Mode must be set to &apos;Scheduled&apos;.</description>
        <inlineHelpText>If checked, allows Admin to make &apos;global&apos; changes to the Budget, including edits to the Budget&apos;s Project, Resource, Currency, or Date, even if Include In Financials is checked. Config requirement: Actuals Calculation Mode must be set to &apos;Scheduled&apos;.</inlineHelpText>
        <label>Admin Global Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>The monetary amount for the Budget, not including any amount entered separately in the Expense Amount field. Defaults to and must always be same currency as Project.</description>
        <inlineHelpText>The monetary amount for the Budget, not including any amount entered separately in the Expense Amount field. Defaults to and must always be same currency as Project.</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox should be checked when the Budget is approved - typically by a workflow driven by the Status field.</description>
        <inlineHelpText>This checkbox should be checked when the Budget is approved - typically based on the Status field.</inlineHelpText>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Approved_for_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved for Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Audit_Notes__c</fullName>
        <label>Audit Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__Bill_Date__c</fullName>
        <label>Bill Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Billed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Event_Invoiced__c</fullName>
        <description>Reflects Invoiced flag value on Billing Event Item&apos;s parent Billing Event</description>
        <formula>IF(OR(ISNULL(pse__Billing_Event_Item__c),ISBLANK(pse__Billing_Event_Item__c),ISNULL(pse__Billing_Event_Item__r.pse__Billing_Event__c),ISBLANK(pse__Billing_Event_Item__r.pse__Billing_Event__c)),$Label.pse__common_label_n_a,IF(pse__Billing_Event_Item__r.pse__Billing_Event__r.pse__Invoiced__c,$Label.pse__common_label_yes,$Label.pse__common_label_no))</formula>
        <label>Billing Event Invoiced</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Event_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Event Item</label>
        <referenceTo>pse__Billing_Event_Item__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Event_Released__c</fullName>
        <description>Reflects Released flag value on Billing Event Item&apos;s parent Billing Event</description>
        <formula>IF(OR(ISNULL(pse__Billing_Event_Item__c),ISBLANK(pse__Billing_Event_Item__c),ISNULL(pse__Billing_Event_Item__r.pse__Billing_Event__c),ISBLANK(pse__Billing_Event_Item__r.pse__Billing_Event__c)),$Label.pse__common_label_n_a,IF(pse__Billing_Event_Item__r.pse__Billing_Event__r.pse__Is_Released__c,$Label.pse__common_label_yes,$Label.pse__common_label_no))</formula>
        <label>Billing Event Released</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Event_Status__c</fullName>
        <description>Status pick list value on Billing Event Item&apos;s parent Billing Event</description>
        <formula>IF(OR(ISNULL(pse__Billing_Event_Item__c),ISBLANK(pse__Billing_Event_Item__c),ISNULL(pse__Billing_Event_Item__r.pse__Billing_Event__c),ISBLANK(pse__Billing_Event_Item__r.pse__Billing_Event__c)),&apos;&apos;,TEXT(pse__Billing_Event_Item__r.pse__Billing_Event__r.pse__Status__c))</formula>
        <label>Billing Event Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Event__c</fullName>
        <description>Formula hyperlink to the Billing Event (parent record to the Bill Event Item) if any.</description>
        <formula>IF(OR(ISNULL(pse__Billing_Event_Item__c),ISBLANK(pse__Billing_Event_Item__c),ISNULL(pse__Billing_Event_Item__r.pse__Billing_Event__c),ISBLANK(pse__Billing_Event_Item__r.pse__Billing_Event__c)),&apos;&apos;,HYPERLINK(&apos;/&apos;&amp;pse__Billing_Event_Item__r.pse__Billing_Event__c, IF(OR(ISNULL(pse__Billing_Event_Item__r.pse__Billing_Event__r.Name),ISBLANK(pse__Billing_Event_Item__r.pse__Billing_Event__r.Name)),pse__Billing_Event_Item__r.pse__Billing_Event__c,(pse__Billing_Event_Item__r.pse__Billing_Event__r.Name))))</formula>
        <label>Billing Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billing Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Budget_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Header</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>pse__Budget_Header__c.pse__Project__c</field>
                <operation>equals</operation>
                <value>Project__c</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>pse__Budget_Header__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__Effective_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Eligible_for_Billing__c</fullName>
        <description>Indicates Budget is in a state that is eligible for Billing Event Generation (not including the Approved for Billing flag, which may also be required per global config).

This means all of the following conditions must be met:
Billing Hold = false
Exclude from Billing = false
Include In Financials = true
Billable = true
Billed = false
Invoiced = false
Billing Event Item = {blank}
Project = {not blank}
Project&apos;s Account = {not blank}
Project Exclude From Billing = false</description>
        <formula>IF(AND(NOT(pse__Billing_Hold__c),NOT(pse__Exclude_from_Billing__c),pse__Include_In_Financials__c,pse__Billable__c,NOT(pse__Billed__c),NOT(pse__Invoiced__c),OR(ISNULL(pse__Billing_Event_Item__c),ISBLANK(pse__Billing_Event_Item__c)),NOT(OR(ISNULL(pse__Project__c),ISBLANK(pse__Project__c))),NOT(OR(ISNULL(pse__Project__r.pse__Account__c),ISBLANK(pse__Project__r.pse__Account__c))),NOT(pse__Project__r.pse__Exclude_From_Billing__c)),$Label.pse__common_label_yes,$Label.pse__common_label_no)</formula>
        <inlineHelpText>Indicates Budget is in a state that is eligible for Billing Event Generation (not including the Approved for Billing flag, which may also be required per global config).</inlineHelpText>
        <label>Eligible for Billing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_from_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, never bill this business record.  Same effect as Billing Hold, but intended to reflect a permanent exclusion from Billing Generation.</description>
        <inlineHelpText>If checked, never bill this business record.  Same effect as Billing Hold, but intended to reflect a permanent exclusion from Billing Generation.</inlineHelpText>
        <label>Exclude from Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Expense_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>The monetary amount (if any) explicitly set aside for Expenses in the Budget. This is separate from and in addition to the Budget Amount field. Defaults to and must always be same currency as Project.</description>
        <inlineHelpText>The monetary amount (if any) explicitly set aside for Expenses in the Budget. This is separate from and in addition to the Budget Amount field. Defaults to and must always be same currency as Project.</inlineHelpText>
        <label>Expense Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Expense_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expense Transaction</label>
        <referenceTo>pse__Transaction__c</referenceTo>
        <relationshipLabel>Budget (Expense Transaction)</relationshipLabel>
        <relationshipName>ExpenseForBudgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Include_In_Financials__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include In Financials</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Invoiced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoiced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_Project_Group_Currency_Code__c</fullName>
        <formula>TEXT(pse__Override_Project_Group__r.CurrencyIsoCode)</formula>
        <label>Override Project Group Currency Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Override_Project_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this field is set, it overrides the Group to which a Budget&apos;s Transactions will roll up for Group Actuals, even if its Project is in a different Group.  Typically a Budget&apos;s Transactions roll up to its Project&apos;s Group.  Note that either way, the Transactions will continue to roll up to the same Project&apos;s Project Actuals.</description>
        <inlineHelpText>If this field is set, it overrides the Group to which a Budget&apos;s Transactions will roll up for Group Actuals, even if its Project is in a different Group. Typically a Budget&apos;s Transactions roll up to its Project&apos;s Group.</inlineHelpText>
        <label>Override Project Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Override Group For Budgets</relationshipLabel>
        <relationshipName>Override_Group_For_Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_Project_Practice_Currency_Code__c</fullName>
        <formula>TEXT(pse__Override_Project_Practice__r.CurrencyIsoCode)</formula>
        <label>Override Project Practice Currency Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Override_Project_Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this field is set, it overrides the Practice to which a Budget&apos;s Transactions will roll up for Practice Actuals, even if its Project is in a different Practice.  Typically a Budget&apos;s Transactions roll up to its Project&apos;s Practice.  Note that either way, the Transactions will continue to roll up to the same Project&apos;s Project Actuals.</description>
        <inlineHelpText>If this field is set, it overrides the Practice to which a Budget&apos;s Transactions will roll up for Practice Actuals, even if its Project is in a different Practice.  Typically a Budget&apos;s Transactions roll up to its Project&apos;s Practice.</inlineHelpText>
        <label>Override Project Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Override Practice For Budgets</relationshipLabel>
        <relationshipName>Override_Practice_For_Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_Project_Region_Currency_Code__c</fullName>
        <formula>TEXT(pse__Override_Project_Region__r.CurrencyIsoCode)</formula>
        <label>Override Project Region Currency Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Override_Project_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this field is set, it overrides the Region to which a Budget&apos;s Transactions will roll up for Regional Actuals, even if its Project is in a different Region.  Typically a Budget&apos;s Transactions roll up to its Project&apos;s Region.  Note that either way, the Transactions will continue to roll up to the same Project&apos;s Project Actuals.</description>
        <inlineHelpText>If this field is set, it overrides the Region to which a Budget&apos;s Transactions will roll up for Regional Actuals, even if its Project is in a different Region.  Typically a Budget&apos;s Transactions roll up to its Project&apos;s Region.</inlineHelpText>
        <label>Override Project Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Override Region For Budgets</relationshipLabel>
        <relationshipName>Override_Region_For_Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__PreBilledAmount__c</fullName>
        <description>The field is deprecated. It has been replaced by Pre_Billed_Amount__c.</description>
        <inlineHelpText>The portion of the combined Budget/Expense Amounts to be pre-billed. Defaults to and must always be same currency as Project. This field has been replaced by the newer Pre_Billed_Amount__c field.</inlineHelpText>
        <label>DEPRECATED: Pre-Billed Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Pre_Billed_Amount__c</fullName>
        <description>The portion of the combined Budget/Expense Amounts to be pre-billed. Defaults to and must always be same currency as Project. This field is a replacement for the old Pre-Billed Amount field (PreBilledAmount__c) which did not allow non-integer decimals.</description>
        <inlineHelpText>The portion of the combined Budget/Expense Amounts to be pre-billed. Defaults to and must always be same currency as Project. This field is a replacement for the old Pre-Billed Amount field (PreBilledAmount__c) which did not allow non-integer decimals.</inlineHelpText>
        <label>Pre-Billed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Pre_Billed_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pre-Billed Transaction</label>
        <referenceTo>pse__Transaction__c</referenceTo>
        <relationshipLabel>Budget (Pre-Billed Transaction)</relationshipLabel>
        <relationshipName>PreBilledForBudgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Total_Amount__c</fullName>
        <formula>pse__Amount__c + pse__Expense_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>pse__Transaction__c</referenceTo>
        <relationshipLabel>Budget</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Purchase Order</fullName>
                    <default>true</default>
                    <label>Customer Purchase Order</label>
                </value>
                <value>
                    <fullName>Vendor Purchase Order</fullName>
                </value>
                <value>
                    <fullName>Work Order</fullName>
                </value>
                <value>
                    <fullName>Internal Budget</fullName>
                </value>
                <value>
                    <fullName>Customer Purchase Order Change Request</fullName>
                </value>
                <value>
                    <fullName>Vendor Purchase Order Change Request</fullName>
                </value>
                <value>
                    <fullName>Work Order Change Request</fullName>
                </value>
                <value>
                    <fullName>Internal Budget Change Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Budget</label>
    <listViews>
        <fullName>pse__All</fullName>
        <columns>NAME</columns>
        <columns>pse__Account__c</columns>
        <columns>pse__Opportunity__c</columns>
        <columns>pse__Project__c</columns>
        <columns>pse__Effective_Date__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>pse__Amount__c</columns>
        <columns>pse__Expense_Amount__c</columns>
        <columns>pse__PreBilledAmount__c</columns>
        <columns>pse__Type__c</columns>
        <columns>pse__Status__c</columns>
        <columns>pse__Approved__c</columns>
        <columns>pse__Include_In_Financials__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Budget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>pse__PSE_Approver_Share__c</fullName>
        <label>PSE Approver Share</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>pse__PSE_Member_Share__c</fullName>
        <label>PSE Member Share</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>pse__PSE_PM_Share__c</fullName>
        <label>PSE PM Share</label>
    </sharingReasons>
    <validationRules>
        <fullName>pse__Budget_Header_Account_Mismatch</fullName>
        <active>true</active>
        <errorConditionFormula>AND(LEN(pse__Budget_Header__c)&gt;0, pse__Budget_Header__r.pse__Account__c != pse__Account__c)</errorConditionFormula>
        <errorDisplayField>pse__Budget_Header__c</errorDisplayField>
        <errorMessage>The budget header&apos;s account must match the account on this budget</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Budget_Header_Project_Mismatch</fullName>
        <active>true</active>
        <errorConditionFormula>AND(LEN(pse__Budget_Header__c)&gt;0,pse__Budget_Header__r.pse__Project__c != pse__Project__c)</errorConditionFormula>
        <errorDisplayField>pse__Budget_Header__c</errorDisplayField>
        <errorMessage>The budget header&apos;s project does not match the project on this budget</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Budget_Header_Type_Mismatch</fullName>
        <active>false</active>
        <errorConditionFormula>AND(LEN(pse__Budget_Header__c)&gt;0,TEXT(pse__Budget_Header__r.pse__Type__c) != TEXT(pse__Type__c))</errorConditionFormula>
        <errorDisplayField>pse__Type__c</errorDisplayField>
        <errorMessage>The budget header&apos;s type must match the type on this budget</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Budget_Project_is_Constant</fullName>
        <active>true</active>
        <description>A Budget&apos;s Project field value may not be blank and may not be updated once set (unless Admin Global Edit is checked, Audit Notes are provided, and Actuals Calculation Mode is Scheduled).</description>
        <errorConditionFormula>OR(ISNULL(pse__Project__c),(pse__Project__c=&apos;&apos;),AND(ISCHANGED(pse__Project__c),OR(NOT(pse__Admin_Global_Edit__c),ISNULL(pse__Audit_Notes__c),ISBLANK(TRIM(pse__Audit_Notes__c)))))</errorConditionFormula>
        <errorDisplayField>pse__Project__c</errorDisplayField>
        <errorMessage>A Budget&apos;s Project field value may not be blank and may not be updated once set (unless Admin Global Edit is checked, Audit Notes are provided, and Actuals Calculation Mode is Scheduled).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Has_non_negative_budget_amount</fullName>
        <active>true</active>
        <description>This check will ensure that the budget amount is not a negative value</description>
        <errorConditionFormula>pse__Amount__c   &lt;  0</errorConditionFormula>
        <errorDisplayField>pse__Amount__c</errorDisplayField>
        <errorMessage>Amount should be a positive value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Has_non_negative_pre_billed_amount</fullName>
        <active>true</active>
        <description>This check will ensure that the budget pre billed amount is not a negative value</description>
        <errorConditionFormula>pse__PreBilledAmount__c  &lt;  0</errorConditionFormula>
        <errorDisplayField>pse__PreBilledAmount__c</errorDisplayField>
        <errorMessage>Pre Billed Amount should be a positive value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Master_Budget_is_Constant</fullName>
        <active>true</active>
        <description>Master Budget cannot be changed once set.</description>
        <errorConditionFormula>AND(ISCHANGED(pse__Budget_Header__c),LEN(PRIORVALUE(pse__Budget_Header__c))&gt;0)</errorConditionFormula>
        <errorDisplayField>pse__Budget_Header__c</errorDisplayField>
        <errorMessage>Master Budget cannot be changed once set.</errorMessage>
    </validationRules>
</CustomObject>